@@ -2,27 +2,22 @@
 #ifndef _INCLUDED_TIMER_H_
 #define _INCLUDED_TIMER_H_
 
-#include <map>
+#include "EventHandler.h"
 
 using namespace std;
 
 namespace qhub {
 
 class Timer {
-private:
-	typedef map<Timer*, unsigned> Alarms;
-	static Alarms alarms, alarms2;
-	static unsigned second;
-	static bool modified;
-	
 public:
-	static unsigned getSecond() throw() { return second; };
-	static void tick() throw();
-
-	Timer() {};
-	virtual ~Timer() { alarm(0); };
+	Timer() throw();
+	virtual ~Timer() throw();
 	void alarm(unsigned seconds = 0) throw();
-	virtual void onAlarm() throw() {};
+	virtual void onAlarm() throw() {}
+
+private:
+	struct event ev;
+	struct timeval tv;
 };
 
 } //namespace qhub
