@@ -166,7 +166,6 @@ AC_CHECK_HEADERS([unistd.h])
 AC_C_INLINE
 AC_C_CONST
 
-AC_FUNC_MALLOC
 AC_FUNC_VPRINTF
 
 AC_STRUCT_TM
